--- a/portfolio/server/package.json
+++ b/portfolio/server/package.json
@@ -15,7 +15,9 @@
     "@types/node": "^22.7.5",
     "@types/node-cron": "^3.0.11",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mongoose": "^8.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   }
